<resources>
    <string name="app_name">MDLink Health</string>
    <string name="action_settings">Settings</string>
    <string name="urgentcare">MDlink doctor see and treat several medical issue including 90% of the top issues seen by Urgent Care and the E.R. </string>
    <string name="medicaladvice">Not sure what to do? Get Medical advice from our MDLink doctors when you send us your question </string>
    <string name="labs"> if further investigation is required, our doctor can send \n a Lab Request to you / your nearest laboratory </string>
    <string name="addction">If you have fallen into a pattern of misusing, alcohol , drugs, cigarettes, medications or food, our providers can help</string>
    <string name="mood">There are several treatment approaches for depressions and mood issues that can help yoy start to feel better </string>
    <string name="therapy"> Our therapists can provide a safe, confidential space for you to get the treatment you need to help with your life</string>
    <string name="title_activity_depression__and__mood">Depression_And_Mood</string>
    <string name="title_activity_patient__portal__data">Patient_Portal_Data</string>
    <string name="addc">MDLink is a Secure online medical \n platform and service that allows \n patients to connect with the best \n doctors and receive treatment best \n video , audio or text messages. \n\n\n\n\n Our digital platform helps to address \n the challenges of connecting with \n patients who are unable to reach their \n delivering a personalized and \n convenient state-of-the-art service</string>
    <string name="label_login">Login</string>
    <string name="label_urgentcare">Urgent Care</string>
    <string name="label_learnmore">Learn More</string>
    <string name="label_medicaladvice">Medical Advice</string>
    <string name="label_labesandscreen">Labs and Screening</string>
    <string name="label_addiction">Addiction</string>
    <string name="label_depressandmood">Depression And Mood</string>
    <string name="label_therapy">Therapy</string>
    <string name="label_already_have_account">Already have an account?</string>
    <string name="label_signin"> Sign in </string>
    <string name="label_save">Save</string>
    <string name="label_clear">Clear</string>
    <string name="label_tap_to_sign">Tap to sign</string>
    <string name="label_attach_file">Attach file</string>
    <string name="label_medical_certificate">Medical Certificate</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="loading">Loading...</string>
    <string name="ok">Ok</string>
    <string name="label_doctorregistration">Doctor Registration</string>
    <string name="label_doctorprofile">Doctor Profile</string>
    <string name="label_register">Register</string>
    <string name="label_submit">Submit</string>
    <string name="label_howconnect">How would you like to connect?</string>
    <string name="audio_12">Audio</string>
    <string name="instant_message_12">Instant Message</string>
    <string name="video_call_15">Video Call</string>
    <string name="label_coupon_code">Coupon Code</string>
    <string name="label_bookappointment">Book Appointment</string>
    <string name="label_medical_checkout">Medical Checkout</string>
    <string name="label_updateprofile">Update Profile</string>
    <string name="label_profile">Profile</string>
    <string name="label_welcome">Welcome</string>
    <string name="label_purpose">Purpose</string>
    <string name="label_pharmacy">Pharmacy</string>
    <string name="label_previous_hospital">Previous Hospital</string>
    <string name="label_allergies">Allergies</string>
    <string name="label_type">Type</string>
    <string name="label_for">For</string>
    <string name="label_name">Name</string>
    <string name="label_age">Age</string>
    <string name="label_paybypaypal">Pay by Paypal</string>
    <string name="label_confirmappt">Confirm Appointment</string>
    <string name="colon">: %1$s</string>
    <string name="appt_price">%1$s USD $ %2$s / per session</string>
    <string name="label_scheduledappointment">Scheduled Appointment</string>
    <string name="label_i_would_to_renew_refill_a_prescription">I would to renew/refill a prescription</string>
    <string name="i_would_to_renew_refill_a_prescription">I would to renew/refill a prescription : %1$s</string>
    <string name="label_i_would_to_obtain_sicknote">I would like to obtain a sick note</string>
    <string name="i_would_to_obtain_sicknote">I would like to obtain a sick note : %1$s</string>
    <string name="join">Join</string>
    <string name="cancel">Cancel</string>
    <string name="pending">Pending</string>
    <string name="paid">Paid</string>
    <string name="label_payment_status">Payment Status</string>
    <string name="medicalcondition">Medical Condition: %1$s</string>
    <string name="payment_status">Payment Status: %1$s</string>
    <string name="name">Name: %1$s</string>
    <string name="reason">Reason: %1$s</string>
    <string name="date">Date: %1$s</string>
    <string name="time">Time: %1$s</string>
    <string name="type">Type: %1$s</string>
    <string name="label_paid">Paid</string>
    <string name="label_pending">Pending</string>
    <string name="label_about_us">About Us</string>
    <string name="label_your_re_safe_with_us">You\'re Safe With Us</string>
    <string name="label_about_one">MDLink is a secure online medical platform and service that allows patients to connect with the best doctors and receive treatment via video, audio or text messages.
        \n\nOur digital platform helps to address the challenge of connecting with patients who are unable to reach their Doctors on time and at the same time delivering a personalized and convenient state-of-the-art service.
        \n
        \nOur infrastructure managed on the AWS Platform gives us the leverage to be HIPAA compliant. This means that we ensure your health data is very secure, by international standards.
        \n
        \nOur MDLink Doctors can provide patients with:
        \n-Prescriptions
        \n-X-Ray/Radiology Requests
        \n-Blood Testing Requests
        \n-Medical Leave Notes</string>
    <string name="label_mission">Mission</string>
    <string name="label_about_two">To improve affordable access to health care:\n
        1. Throughout the Caribbean \n
        2. One country/patient/day at a time</string>
    <string name="label_who">WHO</string>
    <string name="label_about_three">
        Founded in 2017, MDLink is an innovative medical service fueled by a passionate team of medical practitioners across the Caribbean, who are dedicated to bringing exceptional healthcare services to your fingertips. Our focus is directed at seamless patient care, faster service and modern healthcare innovation.
    </string>
    <string name="label_what">WHAT</string>
    <string name="label_about_four">
        We believe that access to healthcare is essential to all patients and so we provide instant access to affordable healthcare at any given place or time. Our team of skilled professionals provide services in General Practice, Urgent Care, Dermatology and Psychiatry.
    </string>
    <string name="label_how">HOW</string>
    <string name="label_about_five">
        Get a medical opinion/second opinion from a doctor \n
        Book an appointment at a time convenient to you \n
        Connect with a certified doctor \n
        Get treatment online!
    </string>
    <string name="label_guide">Guide</string>
    <string name="label_guide_one">You can access MDLink in two convenient ways: \n
            • Our Mobile App on your smartphone or tablet \n
            • On your Computer/Laptop using Google Chrome or Firefox web browsers \n
            Getting started with MDLink is fast and easy.</string>
    <string name="label_guide_two">
        1) Get registered quickly using the Patient Portal. This will help us connect you with an MDLink doctor wherever you are. \n
        2) Login and schedule an appointment (it\&#39;s easy!). \n
        3) Tell us whats\&#39;s wrong, then choose your preferred physician and pharmacy. \n
        4) Next, simply ensure that you are in the \&#39;scheduled appointment\&#39; online chatroom/session at your selected appointment time. \n
        5) If you would like to be seen immediately, simply schedule your appointment for the same time. \n
        6) MDLink also provides convenient prescription refill services. \n
        7) Once the doctor visit is complete, click &quot;End Consultation&quot;. That\&#39;s it!
    </string>
    <string name="label_guide_three">
        • Ensure that you are logged in and waiting in the \'scheduled appointment\' chatroom at the time you selected. \n
        • The doctor will initiate the conversation and guide you through your visit. Most medical visits last about 15 minutes.\n
        • Your doctor may guide you through a physical self-examination based on your symptoms.\n
        • The app has a photo feature, which allows you to share photos of your physical symptoms with the doctor, aiding in diagnosis.\n
        • Lighting is very important when your doctor needs to inspect you. Well-lit areas work best. The flashlight function on a smartphone can also provide additional lighting for certain types of video inspection.\n
        • If medically appropriate your doctor will prescribe medication, which will be sent to the pharmacy of your choice.
 </string>
    <string name="label_guide_four">
        • Check your e-mail/ notifications.\n
        • Head to your pharmacy, your medication is ready for pick-up!\n
        • If a lab test was requested, head to the lab at your convenience and get tested.\n
        • We will follow up on your lab test results and schedule a follow-up appointment, if necessary.\n
        • A few days after your MDLink consult, we will contact you to find out how you are doing. In most cases, we have found patients are completely better.\n
        • If your medical issue has not been resolved, we can recommend and help coordinate any necessary follow-up care.
 </string>
    <string name="label_guide_five">
        • Get registered quickly using the Doctor Portal.\n
        • Before approval, your registration credentials will be reviewed and an online interview will be conducted for verification purposes.\n
        • MDLink patients will be assigned to you based on your availability. However, patients also have the option to select their preferred doctor.\n
        • MDLink doctors can also use the platform to set online appointments for their personal patients.\n
        • Once an appointment is scheduled, the doctor is expected to initiate contact at the scheduled time period.
    </string>
    <string name="label_for_patient">For Patient</string>
    <string name="label_during_your_medical">During Your Online Medical Consult</string>
    <string name="label_after_your_medical">After Your Medical Consult</string>
    <string name="label_for_doctor">For Doctors</string>
    <string name="label_user_guide">User Guide</string>
    <string name="label_view_patient_profile">View Patient Profile</string>
    <string name="label_view_patient_file">View Patient File</string>
    <string name="label_contactus">Contact Us</string>
    <string name="type_message">Type Message</string>
    <string name="userAvatar">Avatar</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main_chat">General Channel</string>
    <string name="allow_notification">Allow Notification</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms">Terms of Use</string>
    <string name="faqs">FAQs</string>
    <string name="enjoy_app">Enjoying MDLink Health ?</string>
    <string name="tap_to_rate">Tap a star to rate in the Play Store</string>
    <string name="not_now">Not Now</string>
    <string name="share_app">Share App</string>
</resources>