<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llinclude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar_mdlink" />

    </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:background="@color/colorLightGrey"
                android:padding="@dimen/pad_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:textColor="@color/colorBlack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/TextSmall"
                    android:text="@string/label_your_re_safe_with_us"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="@dimen/pad_10"
                android:layout_marginRight="@dimen/pad_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|left"
                    style="@style/TextSmall"
                    android:layout_centerHorizontal="true"
                    android:text="@string/label_about_one"/>
            </LinearLayout>

            <LinearLayout
                android:background="@color/colorLightGrey"
                android:padding="@dimen/pad_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:textColor="@color/colorBlack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="viewStart"
                    style="@style/TextSmall"
                    android:text="@string/label_mission"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="@dimen/pad_10"
                android:layout_marginRight="@dimen/pad_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|left"
                    style="@style/TextSmall"
                    android:layout_centerHorizontal="true"
                    android:text="@string/label_about_two"/>
            </LinearLayout>

            <LinearLayout
                android:background="@color/colorLightGrey"
                android:padding="@dimen/pad_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:textColor="@color/colorBlack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="viewStart"
                    style="@style/TextSmall"
                    android:text="@string/label_who"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="@dimen/pad_10"
                android:layout_marginRight="@dimen/pad_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|left"
                    style="@style/TextSmall"
                    android:layout_centerHorizontal="true"
                    android:text="@string/label_about_three"/>
            </LinearLayout>

            <LinearLayout
                android:background="@color/colorLightGrey"
                android:padding="@dimen/pad_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:textColor="@color/colorBlack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="viewStart"
                    style="@style/TextSmall"
                    android:text="@string/label_what"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="@dimen/pad_10"
                android:layout_marginRight="@dimen/pad_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|left"
                    style="@style/TextSmall"
                    android:layout_centerHorizontal="true"
                    android:text="@string/label_about_four"/>
            </LinearLayout>

            <LinearLayout
                android:background="@color/colorLightGrey"
                android:padding="@dimen/pad_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:textColor="@color/colorBlack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="viewStart"
                    style="@style/TextSmall"
                    android:text="@string/label_how"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="@dimen/pad_10"
                android:layout_marginRight="@dimen/pad_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|left"
                    style="@style/TextSmall"
                    android:layout_centerHorizontal="true"
                    android:text="@string/label_about_five"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>